<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sdp.swiftwallet.presentation.transactions.TransactionActivity">

    <Button
        android:id="@+id/transaction_historyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openHistory"
        android:text="History"
        app:layout_constraintEnd_toStartOf="@+id/transaction_statsButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/transaction_statsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openStats"
        android:text="Stats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/transaction_historyButton"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/transaction_flFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_historyButton" />

</androidx.constraintlayout.widget.ConstraintLayout>