<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="35dp"
    tools:context="com.sdp.swiftwallet.presentation.main.fragments.ProfileFragment">

    <TextView
        android:id="@+id/profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_profile"
        android:textSize="@dimen/dim_title"
        android:textStyle="bold"
        android:textColor="@color/primary_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_title"
        app:layout_constraintBottom_toTopOf="@+id/reset_email_layout"
        tools:context="com.sdp.swiftwallet.ProfileActivity">

        <TextView
            android:id="@+id/profile_welcomeTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logged_in_as"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:textSize="@dimen/big_size_text"
            android:layout_gravity="top|center"/>

        <TextView
            android:id="@+id/profile_userEmailTv"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/big_size_text"
            android:textColor="@color/primary_text"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reset_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:context="com.sdp.swiftwallet.ProfileActivity">

        <EditText
            android:id="@+id/update_emailEt"
            android:importantForAutofill="no"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_input"
            app:layout_constraintTop_toBottomOf="@+id/registerInputUsername"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:hint="@string/reset_your_email"
            android:imeOptions="actionNext"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/primary_text"
            android:inputType="textEmailAddress"/>

        <Button
            android:id="@+id/update_email_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/reset"
            android:backgroundTint="@color/button_background_color"
            />
    </LinearLayout>

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/logout"
        android:backgroundTint="@color/button_background_color"/>

</androidx.constraintlayout.widget.ConstraintLayout>