<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainNavHomeItem"
        android:icon="@drawable/ic_home"
        android:title=""/>

    <item
        android:id="@+id/mainNavStatsItem"
        android:icon="@drawable/ic_stats"
        android:title=""/>

    <item
        android:id="@+id/mainNavPaymentItem"
        android:icon="@drawable/ic_payment"
        android:title=""/>

    <item
        android:id="@+id/mainNavMessageItem"
        android:icon="@drawable/ic_message"
        android:title=""/>

    <item
        android:id="@+id/mainNavProfileItem"
        android:icon="@drawable/ic_profile"
        android:title=""/>
</menu>