<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bar_home"
        android:icon="@drawable/ic_home"
        android:title=""/>

    <item
        android:id="@+id/bar_stats"
        android:icon="@drawable/ic_stats"
        android:title=""/>

    <item
        android:id="@+id/bar_payment"
        android:icon="@drawable/ic_payment"
        android:title=""/>

    <item
        android:id="@+id/bar_message"
        android:icon="@drawable/ic_message"
        android:title=""/>

    <item
        android:id="@+id/bar_profile"
        android:icon="@drawable/ic_profile"
        android:title=""/>
</menu>